<resources>
    <string name="app_name">Realtime Chat</string>

    <!--Place Holders-->
    <string name="placeholder_time">10.30 AM</string>
    <string name="placeholder_badge">100</string>
    <string name="placeholder_message">This is a very big message so big it might spill and spoil the layout</string>
    <string name="chat_placeholder">First Last Name</string>
    <string name="date_placeholder">1 November 2019</string>

    <!--TextViews-->
    <string name="username">UserName</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>

    <!--Buttons-->
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="refresh">Refresh</string>

    <!--Hints-->
    <string name="username_hint">Please enter a Username</string>
    <string name="message_hint">Please enter a message</string>

    <!-- Validation Message-->
    <string name="valid_username">Please enter a Username.</string>
    <string name="valid_user_not_found">User not found.</string>
    <string name="valid_user_exist">Username already exists.</string>
    <string name="valid_first_name">Please enter a First name.</string>
    <string name="valid_last_name">Please enter a Last name.</string>
    <string name="valid_user_creation">Unable to create this user.</string>
    <string name="valid_no_user_list">There are no users the list.</string>


    <!--Content Description-->
    <string name="user">user</string>

    <string name="user_created">User created Successfully.</string>
</resources>
