<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="home"
            type="com.tatvum.realtimechat.home.HomeListItem" />

        <variable
            name="clickListener"
            type="com.tatvum.realtimechat.home.HomeItemListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="@{()->clickListener.onClick(home)}"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/user_image"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_marginStart="@dimen/app_margin"
            android:layout_marginLeft="@dimen/app_margin"
            android:layout_marginTop="@dimen/app_half_margin"
            android:contentDescription="@string/user"
            android:src="@drawable/ic_user"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/name"
            style="@style/user_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/app_margin"
            android:layout_marginLeft="@dimen/app_margin"
            android:layout_marginTop="@dimen/app_margin"
            android:layout_marginEnd="@dimen/app_margin"
            android:layout_marginRight="@dimen/app_margin"
            android:text="@{home.displayName}"
            android:textSize="@dimen/user_text_size"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/user_image"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/first_name" />

        <TextView
            android:id="@+id/message"
            style="@style/user_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/app_margin"
            android:layout_marginLeft="@dimen/app_margin"
            android:layout_marginTop="@dimen/app_half_margin"
            android:layout_marginEnd="@dimen/app_margin"
            android:layout_marginRight="@dimen/app_margin"
            android:maxLines="1"
            android:text="@{home.messageLine}"
            android:textColor="@color/dkGrey"
            android:textSize="@dimen/message_text"
            app:layout_constraintBottom_toBottomOf="@+id/user_image"
            app:layout_constraintEnd_toStartOf="@+id/badge"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/user_image"
            app:layout_constraintTop_toBottomOf="@+id/name"
            tools:text="@string/placeholder_message" />

        <TextView
            android:id="@+id/time"
            style="@style/user_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/app_margin"
            android:layout_marginRight="@dimen/app_margin"
            android:text="@string/placeholder_time"
            android:textSize="@dimen/time_text_size"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/badge"
            style="@style/user_text"
            android:layout_width="@dimen/badge_size"
            android:layout_height="@dimen/badge_size"
            android:layout_marginEnd="@dimen/app_margin"
            android:layout_marginRight="@dimen/app_margin"
            android:background="@drawable/circle"
            android:gravity="center_vertical"
            android:text="@string/placeholder_badge"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size"
            android:textStyle="bold"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/time"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>