<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_outer_login"
        android:layout_marginLeft="@dimen/margin_outer_login"
        android:layout_marginEnd="@dimen/app_margin"
        android:layout_marginRight="@dimen/app_margin"
        android:text="@string/first_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/firstName"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/user_text" />

    <EditText
        android:id="@+id/firstName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/app_margin"
        android:layout_marginLeft="@dimen/app_margin"
        android:layout_marginEnd="@dimen/margin_outer_login"
        android:layout_marginRight="@dimen/margin_outer_login"
        android:ems="10"
        android:importantForAutofill="no"
        android:hint="@string/first_name"
        app:layout_constraintBaseline_toBaselineOf="@+id/textFirstName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textFirstName"
        style="@style/edit_user" />

    <TextView
        android:id="@+id/textLastName"
        style="@style/user_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_outer_login"
        android:layout_marginLeft="@dimen/margin_outer_login"
        android:layout_marginTop="@dimen/margin_top_sign_up"
        android:layout_marginEnd="@dimen/app_margin"
        android:layout_marginRight="@dimen/app_margin"
        android:text="@string/last_name"
        app:layout_constraintEnd_toStartOf="@+id/lastName"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textFirstName" />

    <EditText
        android:id="@+id/lastName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/app_margin"
        android:layout_marginLeft="@dimen/app_margin"
        android:layout_marginEnd="@dimen/margin_outer_login"
        android:layout_marginRight="@dimen/margin_outer_login"
        android:ems="10"
        android:importantForAutofill="no"
        android:hint="@string/last_name"
        app:layout_constraintBaseline_toBaselineOf="@+id/textLastName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textLastName"
        style="@style/edit_user" />

    <TextView
        android:id="@+id/textUserName"
        style="@style/user_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_outer_login"
        android:layout_marginLeft="@dimen/margin_outer_login"
        android:layout_marginTop="@dimen/margin_top_sign_up"
        android:layout_marginEnd="@dimen/app_margin"
        android:layout_marginRight="@dimen/app_margin"
        android:text="@string/username"
        app:layout_constraintEnd_toStartOf="@+id/userName"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textLastName" />

    <EditText
        android:id="@+id/userName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/app_margin"
        android:layout_marginLeft="@dimen/app_margin"
        android:layout_marginEnd="@dimen/margin_outer_login"
        android:layout_marginRight="@dimen/margin_outer_login"
        android:ems="10"
        android:importantForAutofill="no"
        android:hint="@string/username"
        app:layout_constraintBaseline_toBaselineOf="@+id/textUserName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textUserName"
        style="@style/edit_user" />

    <Button
        android:id="@+id/signUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/app_margin"
        android:layout_marginLeft="@dimen/app_margin"
        android:layout_marginTop="@dimen/margin_outer_login"
        android:layout_marginEnd="@dimen/app_margin"
        android:layout_marginRight="@dimen/app_margin"
        android:text="@string/sign_up"
        style="@style/Widget.AppCompat.Button.Colored"
        android:theme="@style/cerulean.button"
        android:textColor="@android:color/white"
        android:fontFamily="@font/roboto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userName" />



</androidx.constraintlayout.widget.ConstraintLayout>